# src/users/dto/login.dto.ts
@@ -1,0 +1,8 @@
+import { IsString } from 'class-validator';
+
+export class LoginRequest {
+    @IsString()
+    id: string;
+    @IsString()
+    password: string;
+}
